# splint

./: Cargo.toml  README.md  flake.nix
.github/workflows/: tests.yml
splint/: Cargo.toml
splint-derive/: Cargo.toml
splint-derive/src/: lib.rs
splint/src/: args.rs  call.rs  codec.rs  codec_args.rs  engine.rs  error.rs  exception.rs  external_record.rs  handles.rs  lib.rs  query.rs  record.rs  runtime.rs  scope.rs  term.rs
splint/src/serde/: args.rs  de.rs  external_record.rs  mod.rs  record_token.rs  ser.rs
splint/src/term/: dict.rs
splint/tests/: args.rs  atom.rs  codec.rs  dict.rs  engine.rs  handles.rs  lifecycle.rs  list.rs  record.rs  record_session.rs  serde.rs  term_query.rs  typed_args.rs
swipl-sys/: Cargo.toml  build.rs  generate-bindings.sh
swipl-sys/src/: bindings.rs  lib.rs
