[package]
name = "splint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe, low-level Rust bindings for embedding SWI-Prolog"
readme = "../README.md"

[features]
serde = ["dep:serde"]

[dependencies]
swipl-sys = { version = "0.1.0", path = "../swipl-sys" }
thiserror = "2.0.18"
serde = { version = "1", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "serde"
path = "tests/serde.rs"
required-features = ["serde"]
