[package]
name = "splint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe, low-level Rust bindings for embedding SWI-Prolog"
readme = "../README.md"

[features]
default = ["derive"]
derive = ["dep:splint-derive"]

[dependencies]
swipl-sys = { version = "0.1.0", path = "../swipl-sys" }
splint-derive = { version = "0.1.0", path = "../splint-derive", optional = true }
thiserror = "=2.0.19"

[[test]]
name = "codec"
path = "tests/codec.rs"
required-features = ["derive"]

[[test]]
name = "typed_args"
path = "tests/typed_args.rs"
required-features = ["derive"]
